--- a/Resources/views/CustomForm/form.html.twig
+++ b/Resources/views/CustomForm/form.html.twig
@@ -8,6 +8,6 @@
         {
             container_type: 'table'
         };
-        dywee_handle_form_collection('dywee_form_formFields', config);
+        dywee_handle_form_collection('custom_form_formFields', config);
     });
 </script>
