--- a/Resources/views/CustomForm/table.html.twig
+++ b/Resources/views/CustomForm/table.html.twig
@@ -4,7 +4,7 @@
 <div class="row">
 
     <div class="title-heading">
-        <a href="{{ path('cms_customForm_add') }}" class="btn btn-success pull-right" style="margin-right: 10px"><i class="fa fa-plus"></i> Ajouter</a>
+        <a href="{{ path('custom_form_add') }}" class="btn btn-success pull-right" style="margin-right: 10px"><i class="fa fa-plus"></i> Ajouter</a>
         <h1 class="text-center">Liste des formulaires personnalisés</h1>
     </div>
     <div class="col-md-6">
@@ -30,7 +30,7 @@
                 <p>Ajoutez des champs à votre formulaire via notre outil de création de formulaire et ajoutez les à vos pages.</p>
             </div><!-- /.box-body -->
             <div class="box-footer">
-                <a href="{{ path('cms_customForm_add') }}">Créer un formulaire personnalisé</a>
+                <a href="{{ path('custom_form_add') }}">Créer un formulaire personnalisé</a>
             </div><!-- box-footer -->
         </div><!-- /.box -->
     </div>
