--- a/Resources/views/Templates/default.html.twig
+++ b/Resources/views/Templates/default.html.twig
@@ -28,8 +28,7 @@
     <div class="container">
         {% block bodySubContent %}
             {% for pageElement in page.pageElements %}
-                {% set blockElement = pageElement.template %}
-                {% include blockElement %}
+                {% include pageElement.template %}
             {% endfor %}
         {% endblock %}
     </div>
