--- a/Resources/views/CustomForm/preview.html.twig
+++ b/Resources/views/CustomForm/preview.html.twig
@@ -1,13 +1,14 @@
 {% extends 'DyweeCMSBundle::admin.html.twig' %}
 
-{% block viewBody %}
+{% block body %}
 
-    <div class="title-heading">
-        <h1>Préview du formulaire {{ customForm.name }}</h1>
-    </div>
-
-    <div class="col-md-6">
-        {{ form(form) }}
+    <div class="box">
+        <div class="box-header with-border">
+            <h1 class="box-title">Préview du formulaire {{ customForm.name }}</h1>
+        </div>
+        <div class="box-body">
+            {{ form(form) }}
+        </div>
     </div>
 
 {% endblock %}
