--- a/Resources/views/Render/form.html.twig
+++ b/Resources/views/Render/form.html.twig
@@ -1,7 +1,7 @@
 {% set form = forms['form_' ~ pageElement.content] %}
 
 {% if form.vars.submitted == true and form.vars.valid == true %}
-    formulaire envoyé
+    {{ 'form.sent'|trans }}
 {% else %}
     {{ form(form) }}
 {% endif %}
