Fix the template references

--- a/Resources/views/Admin/details.html.twig
+++ b/Resources/views/Admin/details.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\CMSBundle\Resources\views\Admin\details.html.twig #}
 
-{%  extends "DyweeCMSBundle::admin.html.twig" %}
+{% extends '@DyweeCMSBundle/admin.html.twig' %}
 
 {% block metaTitle %}
     Détails  sur une page {{ parent() }}
