--- a/Resources/views/Admin/table.html.twig
+++ b/Resources/views/Admin/table.html.twig
@@ -43,7 +43,7 @@
                 </small>
             </td>
             <td><small>
-                    {% include 'DyweeCMSBundle:Admin:page_type.html.twig' %}
+                    {% include '@DyweeCMSBundle/Admin/page_type.html.twig' %}
                 </small></td>
             <td class="actions">
                 <a href="{{ path('dywee_cms_details', {id: page.id}) }}" class="link-unstyled" target="_blank"><i class="fa fa-eye"></i> </a>
