--- a/Resources/views/Admin/view.html.twig
+++ b/Resources/views/Admin/view.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\CMSBundle\Resources\View\Admin\view.html.twig #}
 
-{%  extends "DyweeCMSBundle::admin.html.twig" %}
+{% extends '@DyweeCMSBundle/admin.html.twig' %}
 
 {% block metaTitle %} Coup d'oeil sur une page - {{ parent() }} {% endblock %}
 
