--- a/Resources/views/CMSAlert/table.html.twig
+++ b/Resources/views/CMSAlert/table.html.twig
@@ -1,4 +1,4 @@
-{% extends "DyweeCMSBundle::admin.html.twig" %}
+{% extends '@DyweeCMSBundle/admin.html.twig' %}
 
 {% block metaTitle %}
     Liste des alertes {{ parent() }}
