--- a/Resources/views/CustomForm/page.html.twig
+++ b/Resources/views/CustomForm/page.html.twig
@@ -1,4 +1,4 @@
-{% extends 'DyweeCMSBundle:CMS:view.html.twig' %}
+{% extends '@DyweeCMSBundle/CMS/view.html.twig' %}
 
 {% block bodySubContent %}
 
