--- a/Resources/views/FormResponse/table.html.twig
+++ b/Resources/views/FormResponse/table.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\customFormBundle\Resources\View\FormResponse\table.html.twig #}
 
-{%  extends "DyweeCMSBundle::admin.html.twig" %}
+{% extends '@DyweeCMSBundle/admin.html.twig' %}
 
 {% block viewBody %}
 
