--- a/Resources/views/FormResponse/view.html.twig
+++ b/Resources/views/FormResponse/view.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\ModuleBundle\Resources\View\CustomForm\add.html.twig #}
 
-{%  extends "DyweeCMSBundle::admin.html.twig" %}
+{% extends '@DyweeCMSBundle/admin.html.twig' %}
 
 {% block metaTitle %}
     Coup d'oeil sur une réponse de formulaire {{ parent() }}
