--- a/Resources/views/Nav/menu.html.twig
+++ b/Resources/views/Nav/menu.html.twig
@@ -1,11 +1,11 @@
 {# Dywee\CMSBundle\Resources\View\CMS\menu.html.twig #}
 
-{% include 'DyweeCMSBundle:Nav:header.html.twig' %}
+{% include '@DyweeCMSBundle/Nav/header.html.twig' %}
 
 <div class="inner-banner">
     <div class="container">
         <div class="banner-top inner-head">
-            {% include 'DyweeCMSBundle:Nav:navbar.html.twig' %}
+            {% include '@DyweeCMSBundle/Nav/navbar.html.twig' %}
         </div>
     </div>
 </div>
