--- a/Resources/views/Templates/default.html.twig
+++ b/Resources/views/Templates/default.html.twig
@@ -1,6 +1,6 @@
 {# app\Resources\View\Admin\page.html.twig #}
 
-{% extends '::layout.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block body %}
 
