--- a/Resources/views/Templates/index.html.twig
+++ b/Resources/views/Templates/index.html.twig
@@ -1,6 +1,6 @@
 {# app\Resources\View\Admin\index.html.twig #}
 
-{% extends '::homepage.html.twig' %}
+{% extends 'homepage.html.twig' %}
 
 {% block body %}
 
