--- a/Resources/views/admin.html.twig
+++ b/Resources/views/admin.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\CMSBundle\Resources\views\admin.html.twig #}
 
-{% extends "DyweeCoreBundle::admin.html.twig" %}
+{% extends '@DyweeCoreBundle/admin.html.twig' %}
 
 {% block metaTitle %}
     {{ parent() }}
