--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\CMSBundle\Resources\View\index.html.twig #}
 
-{% extends "::layout.html.twig" %}
+{% extends 'layout.html.twig' %}
 
 {% block metaTitle %}
      {{ parent() }}
