--- a/Resources/views/Nav/header.html.twig
+++ b/Resources/views/Nav/header.html.twig
@@ -8,7 +8,7 @@
                 </ul>
             </div>
             <div class="header-right">
-                {% include 'DyweeCMSBundle:Nav:header_right.html.twig' %}
+                {% include '@DyweeCMSBundle/Nav/header_right.html.twig' %}
             </div>
             <div class="clearfix"> </div>
         </div>
