--- a/Resources/views/Page/footer.html.twig
+++ b/Resources/views/Page/footer.html.twig
@@ -3,7 +3,7 @@
         <div class="footer-main">
             <div class="row">
                 <div class="col-xs-12 col-center">
-                    {{ render(controller('DyweeCMSBundle:Menu:navbar', {position: 'footer'})) }}
+                    {{ render(controller('Dywee\\CMSBundle\\Controller\\MenuController::navbarAction', {position: 'footer'})) }}
                 </div>
                 <div class="col-xs-12">
                     <div class="footer-bottom">
