--- a/Resources/views/Page/form.html.twig
+++ b/Resources/views/Page/form.html.twig
@@ -144,7 +144,7 @@
                         </div>
                         <div class="panel-body">
                             {% if page.childArguments is not null %}
-                                {{ render(controller('DyweeModuleBundle:MusicGallery:show', {id: page.childArguments})) }}
+                                {{ render(controller('Dywee\\ModuleBundle\\Controller\\MusicGalleryController::showAction', {id: page.childArguments})) }}
                                 <a href="{{ path('musicGallery_update', {id: page.childArguments}) }}" class="btn btn-default btn-lg">Gérer la galerie musicale associée</a>
                             {% else %}
                                 <a href="#settings" data-toggle="tab"><i class="fa fa-cog"></i> Renseigner une galerie musicale associée (champs "paramètres")</a>
