--- a/Resources/views/Page/index.html.twig
+++ b/Resources/views/Page/index.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\CMSBundle\Resources\View\CMS\index.html.twig #}
 
-{%  extends "::layout.html.twig" %}
+{% extends 'layout.html.twig' %}
 
 {% block metaTitle %}
     {{ page.name }} {{ parent() }}
