Fix issue due to migration

--- a/Resources/views/Page/form.html.twig
+++ b/Resources/views/Page/form.html.twig
@@ -1,6 +1,6 @@
 {# Dywee\CMSBundle\Resources\View\CMS\form.html.twig #}
 
-{% form_theme form 'DyweeCMSBundle:Form:collection_widget.html.twig' %}
+{% form_theme form '@DyweeCMSBundle/Form/collection_widget.html.twig' %}
 
 {{ form_start(form) }}
 
