--- a/Resources/views/CustomForm/form.html.twig
+++ b/Resources/views/CustomForm/form.html.twig
@@ -1,4 +1,4 @@
-{% form_theme form 'DyweeCMSBundle:CustomForm:collection_widget.html.twig' %}
+{% form_theme form '@DyweeCMSBundle/CustomForm/collection_widget.html.twig' %}
 
 {{ form(form) }}
 
